k8s/development/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snk-development
  labels:
    env: snk-development
